immich/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: immich-server
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      containers:
        - image: ghcr.io/immich-app/immich-server:v2.7.4
          name: immich-server
          ports:
            - containerPort: 2283
              protocol: TCP
          volumeMounts:
            - name: server-storage
              mountPath: /data
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: server-storage
          persistentVolumeClaim:
            claimName: server-immich-pvc
