immich/server/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photos-kouidri-fr
  namespace: immich
spec:
  hostnames:
    - photos.kouidri.fr
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: immich-server
          port: 2283
      matches:
        - path:
            type: PathPrefix
            value: /
